  * `VSplit` and `HSplit` classes also take a `token` as argument, these are
    passed to the `Window` class and applied to the content as well.

- Changes to `BufferControl`:

  * `BufferControl` now takes a `input_processor` as argument. (Singular
    instead of plural). If you want to combine multiple, they have to be merged
    together using `merge_input_processors`.

- Changes related to `shortcuts.prompt`:

  * There is now a class `Prompt` that which has a method `prompt`. Both the
    class and the method take about the same arguments. This can be used to
    create a session. Every `prompt` call of the same instance will reuse all
    the arguments given to the class itself. This can be used for instance to
    keep the history between multiple calls.

    Of course, it's still possible to call the global `prompt` function. This
    will create a new instance every time when it's called.

  * The `prompt` function now takes an `extra_key_bindings` argument instead of
    `key_bindings_registry`. This should only contain the additional bindings.

- Changes to the event loops:

  * The event loop API is now closer to how asyncio works. A prompt_toolkit
    `Application` now has a `Future` object. Calling the `.start()` method
    creates and returns that `Future`. An event loop has a `run_until_complete`
    method that takes a future and runs the event loop until the Future is set.

  * `Application` still has a method `run()` that underneath still runs the
    event loop until the `Future` is set and returns that result.

  * The asyncio adaptors (like the asyncio event loop integration) now require
    Python 3.5.

  * The `Input` and `Output` classes has some changes. (Not really important.)

- Changes to the `filters` module:

  * All filters have been turned into functions. For instance, `IsDone`
    became `is_done` and `HasCompletions` became `has_completions`.

    This was done because almost all classes were called without any arguments